Attempted to fix spacing issues in footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,3 +15,18 @@ footer {
 	border-top: 1px solid #454545;
 	border-bottom: 1px solid #454545;
 }
+
+footer #icons{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	}
+
+  footer #icons i{
+	font-size: 60px;
+	font-style: normal;
+	color: rgba(0,0,0,0.4);
+	margin: 10px 30px;
+  }
